--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -55,6 +55,12 @@ mat-checkbox:hover {
   flex-direction: column;
 }
 
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  gap: 10%;
+}
+
 .service-container {
   display: flex;
   flex-direction: row;
