--- a/src/styles.css
+++ b/src/styles.css
@@ -258,6 +258,24 @@ body {
   background-color: #48494b;
 }
 
+/* API Tables Small */
+.api-table-small {
+  padding: 5px;
+}
+
+.api-table-small th, .api-table-small td {
+  padding-inline: 5px;
+  text-align: left;
+}
+
+.api-table-small th {
+  background-color: #000!important;
+}
+
+.api-table-small tr:nth-of-type(2n) {
+  background-color: #48494b;
+}
+
 /* Media Queries */
 
 @media screen and (max-width: 1300px) {
