--- a/src/styles.css
+++ b/src/styles.css
@@ -260,12 +260,15 @@ body {
 
 /* API Tables Small */
 .api-table-small {
-  padding: 5px;
+  padding: 0px;
+  margin: 0px;
+  line-height: .6;
 }
 
 .api-table-small th, .api-table-small td {
   padding-inline: 5px;
   text-align: left;
+  font-size: smaller;
 }
 
 .api-table-small th {
