--- a/src/app/shared/invoice-summary/invoice-summary.component.html
+++ b/src/app/shared/invoice-summary/invoice-summary.component.html
@@ -24,7 +24,7 @@
             <mat-card-content>
               <div *ngFor="let lineItem of invoice.getLineItems()">
                 <mat-list>
-                  {{ lineItem.title }}:
+                  {{ lineItem.serviceName }}:
                   <div fxFlex></div>
                   {{ lineItem.price | currency }}
                 </mat-list>
@@ -74,13 +74,13 @@
 </div>
 
 <div mat-dialog-actions align="end">
-  <button mat-raised-button matDialogClose="cancel" color="primary">
+  <button mat-raised-button matDialogClose="cancel" class="cancel form-button">
     Cancel
   </button>
   <button
     mat-raised-button
     mat-dialog-close="confirm"
-    color="accent"
+    class="primary-color form-button"
     cdkFocusInitial
   >
     Confirm Order
