--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -84,11 +84,11 @@
                         </ng-template>
 
                         <!-- Table Header -->
-                        <ng-template pTemplate="header"><!--
+                        <ng-template pTemplate="footer">
                           <tr>
                             <th>SubTotal</th>
-                            <th>{{ subTotal }}</th>
-                          </tr>-->
+                            <th>{{ subTotal | currency }}</th>
+                          </tr>
                         </ng-template>
 
                       </p-table>
