--- a/src/app/shared/invoice-summary/invoice-summary.component.html
+++ b/src/app/shared/invoice-summary/invoice-summary.component.html
@@ -9,17 +9,18 @@
 
 <div fxLayout="column">
   <mat-card class="mat-elevation-z0">
+    <button (click)="print()" class="print-button">Print Invoice</button>
     <mat-card-title mat-dialog-title style="text-align: center">
       {{ username }} please confirm you order.
     </mat-card-title>
     <mat-card-subtitle style="text-align: center">
       Order date: {{ orderDate | date }}
     </mat-card-subtitle>
-    <hr class="w-100"><br />
+    <hr class="w-100" />
+    <br />
     <mat-card-content mat-dialog-content>
       <div fxLayout="column" fxLayoutGap="10px">
         <div fxFlex>
-
           <mat-card-title>Services</mat-card-title>
           <mat-card-content>
             <div *ngFor="let lineItem of invoice.getLineItems()">
@@ -30,11 +31,10 @@
               </mat-list>
             </div>
           </mat-card-content>
-
         </div>
-        <hr class="w-100"><br />
+        <hr class="w-100" />
+        <br />
         <div fxFlex>
-
           <mat-card-title>Standard Fees</mat-card-title>
           <mat-card-content>
             <mat-list>
@@ -50,11 +50,9 @@
               </mat-list-item>
             </mat-list>
           </mat-card-content>
-
         </div>
-        <hr class="w-100">
+        <hr class="w-100" />
         <div fxFlex>
-
           <mat-card-content>
             <mat-list>
               <mat-list-item>
@@ -64,16 +62,24 @@
               </mat-list-item>
             </mat-list>
           </mat-card-content>
-
         </div>
 
         <br />
       </div>
       <div mat-dialog-actions align="end">
-        <button mat-raised-button matDialogClose="cancel" class="cancel form-button">
+        <button
+          mat-raised-button
+          matDialogClose="cancel"
+          class="cancel form-button"
+        >
           Cancel
         </button>
-        <button mat-raised-button mat-dialog-close="confirm" class="primary-color form-button" cdkFocusInitial>
+        <button
+          mat-raised-button
+          mat-dialog-close="confirm"
+          class="primary-color form-button"
+          cdkFocusInitial
+        >
           Confirm Order
         </button>
       </div>
