--- a/src/app/shared/invoice-summary/invoice-summary.component.html
+++ b/src/app/shared/invoice-summary/invoice-summary.component.html
@@ -9,13 +9,16 @@
 
 <div fxLayout="column">
   <mat-card class="mat-elevation-z0">
-    <button (click)="print()" class="print-button">Print Invoice</button>
+
     <mat-card-title mat-dialog-title style="text-align: center">
       {{ username }} please confirm you order.
     </mat-card-title>
     <mat-card-subtitle style="text-align: center">
       Order date: {{ orderDate | date }}
     </mat-card-subtitle>
+    <div>
+      <button mat-raised-button (click)="print()" class="primary-color form button print-button">Print Invoice</button>
+    </div><br /><br />
     <hr class="w-100" />
     <br />
     <mat-card-content mat-dialog-content>
