--- a/src/app/shared/invoice-summary/invoice-summary.component.html
+++ b/src/app/shared/invoice-summary/invoice-summary.component.html
@@ -17,7 +17,7 @@
       Order date: {{ orderDate | date }}
     </mat-card-subtitle>
     <div>
-      <button mat-raised-button (click)="print()" class="primary-color form button print-button">Print Invoice</button>
+      <button mat-raised-button (click)="print()" class="primary-color form-button print-button">Print Invoice</button>
     </div><br /><br />
     <hr class="w-100" />
     <br />
